# server/src/controllers/user/user.ts
@@ -1,4 +1,4 @@
 // get the current user info
-export function currentSession(request, reply) {
-  reply.code(200).send(request.raw.user);
+export function currentSession(req, res) {
+  res.status(200).send(req.user);
 }
